# Glossary

./: .gitignore  LICENSE  excel_to_json.py  main.py  pyproject.toml
glossaries/: academic.json
templates/: home.html  index.html
