[tool.poetry]
name = "glossary"
version = "0.1.0"
description = ""
authors = ["Lockerio <goryunov.arkadiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
